# Biomni

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
biomni/: llm.py
synapse-biomni-app/: README_streamlit.md  biomni_streamlit_app.py  biomni_synapse.ipynb  launch_app.sh  prompts.txt  pyproject.toml  requirements_streamlit.txt
synapse-biomni-app/.streamlit/: config.toml
